correção do primeiro exercício

--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
@@ -14,8 +14,8 @@
             <li></li>
         </ul>
         
-        <img src="trybe.logo.png" alt="Logo da trybe">
-        <img src="https://assets.website-files.com/619e46b69af4d8226d9391c9/61a65f6306e173a9d58d9b5b_logo.svg" alt="logo do instituto vamoquevamo">
+        <img src="trybe.logo.png" alt="Logo da trybe" width="300px">
+        <img src="https://s2.glbimg.com/7fB7nCGGNmAJZ0ZtvhqtEz-Oxq0=/0x0:692x960/984x0/smart/filters:strip_icc()/s.glbimg.com/jo/g1/f/original/2014/12/18/elio_lazzarotto.jpg" alt="papai noel" width="300px">
         
     </body>
 </html>
