HTML - Links externos e internos - 1 - Crie um parágrafo para cada pessoa da sua lista. 2 - Crie um link entre a sua lista e os parágrafos de pessoas. 3 - Crie um link para a página do Google.

--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <title>HTML</title>
     </head>
     <body>
@@ -119,7 +119,7 @@
             <br>
             <br>
     
-            <p>Sentiu uma vontade súbida de fazer uma busca?
+            <p>Sentiu uma vontade súbita de fazer uma busca?
                 <br>SEUS PROBLEMAS ACABARAM!!!
                 <BR></BR>
                 <A href="http://www.google.com/" target="_blank">
