exercises - text in css ex.5

--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+      body{
+        font-size: 16px;
+      }
         h1{
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
+            font-style: italic;
+            line-height: 100px;
+            text-align: center;
+            text-decoration: underline;
         }
         ul{
             background-color: blueviolet;
         }
         .classe-01{
           background-color: cadetblue;
+        }
+        p{
+          font-weight: 600;
+          font-size: 48px;
         }
 
     </style>
