--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-3-html-e-css-seletores-e-posicionamento/c.3.1-pseudoclasses-group_selections/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-3-html-e-css-seletores-e-posicionamento/c.3.1-pseudoclasses-group_selections/index.html
@@ -6,8 +6,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
-    <p>Principais motivos para eu gostar deles</p>
+    <h1>List of The Best Sites I've Seen</h1>
+    <p>Top 3 best sites on the web</p>
+    <ol>
+      <li>YouTube.com</li>
+      <li>Google.com</li>
+      <li>Wikipedia.org</li>
+    </ol>
+    <p>Main reasons I like them</p>
+    <ul>
+      <li>They are very informative, with unlimited variety of content.</li>
+      <li>They all have search mechanisms that allow me to find what I need.</li>
+      <li>They are very useful tools that help me everyday.</li>
+    </ul>
   </body>
 </html>
