added horizontal table and section1

--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
@@ -3,8 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>80km/h Punch: Know the Smatopoda</title>
   </head>
   <body>
-    <!--insira os elementos aqui-->
+    <nav id="site-map">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contacts</li>
+      </ul>
+    </nav>  
+    <main>
+      <article>
+       <section class="section-1">
+        The mantis shrimp <em>(Odontodactylus Scyllarus)</em> is a member of the marine crustacean order Stomatopoda, especially members of the genus Squilla. Mantis shrimps are so called because the second pair of limbs are greatly enlarged and shaped like the large grasping forelimbs of the praying mantid, or mantis, an insect. They use these appendages to smash through the shells of bivalved mollusks and other hard-shelled prey and to stab fish and other soft-bodied animals.
+        <table>
+          <th>Scientific classification</th>
+          <tr>
+            <td>Kingdom</td>
+            <td>Phylum</td>
+            <td>Subphylum</td>
+            <td>Class</td>
+            <td>Subclass</td>
+            <td>Order</td>
+          </tr>
+          <tr>
+            <td>Animalia</td>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+            <td>Stomatopoda</td>
+          </tr>
+        </table>
+       </section>
+      </article>
+    </main>
   </body>
 </html>
