all basic criteria met on the shrimp page, still needs styling on .css

--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>80km/h Punch: Know the Smatopoda</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>The Mantis Shrimp</h1>
     <nav id="site-map">
       <ul>
         <li>Home</li>
@@ -15,29 +17,86 @@
     </nav>  
     <main>
       <article>
-       <section class="section-1">
-        The mantis shrimp <em>(Odontodactylus Scyllarus)</em> is a member of the marine crustacean order Stomatopoda, especially members of the genus Squilla. Mantis shrimps are so called because the second pair of limbs are greatly enlarged and shaped like the large grasping forelimbs of the praying mantid, or mantis, an insect. They use these appendages to smash through the shells of bivalved mollusks and other hard-shelled prey and to stab fish and other soft-bodied animals.
-        <table>
-          <th>Scientific classification</th>
-          <tr>
-            <td>Kingdom</td>
-            <td>Phylum</td>
-            <td>Subphylum</td>
-            <td>Class</td>
-            <td>Subclass</td>
-            <td>Order</td>
-          </tr>
-          <tr>
-            <td>Animalia</td>
-            <td>Arthropoda</td>
-            <td>Crustacea</td>
-            <td>Malacostraca</td>
-            <td>Hoplocarida</td>
-            <td>Stomatopoda</td>
-          </tr>
+        <div>
+        <section class="section-1">
+          <h2>General information</h2>
+          <p>
+          The mantis shrimp <em>(Odontodactylus Scyllarus)</em> is a member of the marine crustacean order Stomatopoda, especially members of the genus Squilla. Mantis shrimps are so called because the second pair of limbs are greatly enlarged and shaped like the large grasping forelimbs of the praying mantid, or mantis, an insect. They use these appendages to smash through the shells of bivalved mollusks and other hard-shelled prey and to stab fish and other soft-bodied animals.
+        </p>
+        <img src="/images/drawMantisShrimp.jpg" alt="drawing of the mantis shrimp from 1896">
+          <table id="scientific-classification-table">
+            <th class="table-header">Scientific classification</th>
+            <tr>
+              <td>Kingdom</td>
+              <td>Animalia</td>
+            </tr>
+            <tr>
+              <td>Phylum</td>
+              <td>Arthropoda</td>
+            </tr>
+            <tr>
+              <td>Subphylum</td>
+              <td>Crustacea</td>
+            </tr>
+            <tr>
+              <td>Class</td>
+              <td>Malacostraca</td>
+            </tr>
+            <tr>
+              <td>Subclass</td>
+              <td>Hoplocarida</td>
+            </tr>
+            <tr>
+              <td>Order</td>
+              <td>Stomatopoda</td>
+            </tr>
+          </table>
+        </section>   
+        <section>
+          <h2>
+              They are Strong!
+          </h2>            
+          <p>
+              This small sea creature has the strongest punch ever recorded in the animal kingdom. It attacks by whamming down the lower edge of its dull, calcified claw with such speed, it’s enough to pulverize a snail’s shell, smash out chunks of a rock wall or even break a finger.
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/E0Li1k5hGBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
+        </section>
+
+        <section>
+          <h2> 
+            A punch as fast as a bullet!
+          </h2>
+          <p>
+              When its powerful claw is unleashed on a potential meal like a crab or a snail, the peacock mantis shrimp’s 2/10-inch-wide fist accelerates faster than a .22-caliber bullet, reaching speeds of 45 mph underwater and smacking its prey with 200 pounds of force.
+          </p>
+          <img src="/images/mantisShrimpPunch.gif" alt=".gif infographic about the Stomatopoda's punch">
+        </section>
+        <section>
+          <h2>Crazy Eyes!</h2>
+          <p>
+            Eyes of mantis shrimp are located on the long stalks that can move independently.
+Each eye has ‘trinocular vision’, which means it can gauge depth and distance on its own by focusing on objects with three separate regions. 
+They are thought to have the most complex eyes in the animal kingdom and have the most complex visual system ever discovered
+They can see a special spiralling type of light called circularly polarised light that’s not been documented in any other animal. They also have a structure in their eyes that’s similar to technology found in DVD players, only much more advanced. 
+          </p>
+          <img src="/images/eyes.png" alt="close picture of the creature's eyes">
+          <section>
+            <h2>
+              References:
+            </h2>
+            <ol>
+              <li>https://factanimal.com/mantis-shrimp/</li>
+              <li>https://www.dailyinfographic.com/faster-than-a-speeding-mantis-shrimp-fist</li>
+              <li>https://en.wikipedia.org/wiki/Mantis_shrimp</li>
+              <li>https://aqua.org/explore/animals/peacock-mantis-shrimp</li>
+            </ol>
+          </div>
+          </section>
+        </section>
         </table>
        </section>
       </article>
     </main>
+    <footer>Content compiled by Jaider Nunes, 2022</footer>
   </body>
 </html>
