--- a/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
+++ b/fundamentos/bloco-03-intruducao-a-html-e-css/dia-4-html-semantico/exercise-1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -17,41 +17,42 @@
     </nav>  
     <main>
       <article>
-        <div>
-        <section class="section-1">
-          <h2>General information</h2>
-          <p>
-          The mantis shrimp <em>(Odontodactylus Scyllarus)</em> is a member of the marine crustacean order Stomatopoda, especially members of the genus Squilla. Mantis shrimps are so called because the second pair of limbs are greatly enlarged and shaped like the large grasping forelimbs of the praying mantid, or mantis, an insect. They use these appendages to smash through the shells of bivalved mollusks and other hard-shelled prey and to stab fish and other soft-bodied animals.
-        </p>
-        <img src="/images/drawMantisShrimp.jpg" alt="drawing of the mantis shrimp from 1896">
-          <table id="scientific-classification-table">
-            <th class="table-header">Scientific classification</th>
-            <tr>
-              <td>Kingdom</td>
-              <td>Animalia</td>
-            </tr>
-            <tr>
-              <td>Phylum</td>
-              <td>Arthropoda</td>
-            </tr>
-            <tr>
-              <td>Subphylum</td>
-              <td>Crustacea</td>
-            </tr>
-            <tr>
-              <td>Class</td>
-              <td>Malacostraca</td>
-            </tr>
-            <tr>
-              <td>Subclass</td>
-              <td>Hoplocarida</td>
-            </tr>
-            <tr>
-              <td>Order</td>
-              <td>Stomatopoda</td>
-            </tr>
-          </table>
-        </section>   
+        <div class="box1">
+          <section class="section-1">
+            <img id="mantis-drawing" src="/images/drawMantisShrimp.jpg" alt="drawing of the mantis shrimp from 1896"> 
+            <h2>General information</h2>
+            <p>          
+            The mantis shrimp <em>(Odontodactylus Scyllarus)</em> is a member of the marine crustacean order Stomatopoda, especially members of the genus Squilla. Mantis shrimps are so called because the second pair of limbs are greatly enlarged and shaped like the large grasping forelimbs of the praying mantid, or mantis, an insect. They use these appendages to smash through the shells of bivalved mollusks and other hard-shelled prey and to stab fish and other soft-bodied animals.
+            </p>
+            <table id="scientific-classification-table">
+              <th colspan="2" class="table-header"><strong>Scientific classification</strong></th>
+              <tr>
+                <td>Kingdom:</td>
+                <td>Animalia</td>
+              </tr>
+              <tr>
+                <td>Phylum:</td>
+                <td>Arthropoda</td>
+              </tr>
+              <tr>
+                <td>Subphylum:</td>
+                <td>Crustacea</td>
+              </tr>
+              <tr>
+                <td>Class:</td>
+                <td>Malacostraca</td>
+              </tr>
+              <tr>
+                <td>Subclass:</td>
+                <td>Hoplocarida</td>
+              </tr>
+              <tr>
+                <td>Order:</td>
+                <td>Stomatopoda</td>
+              </tr>
+            </table>
+          </section>
+        </div>   
         <section>
           <h2>
               They are Strong!
@@ -69,7 +70,7 @@
           <p>
               When its powerful claw is unleashed on a potential meal like a crab or a snail, the peacock mantis shrimp’s 2/10-inch-wide fist accelerates faster than a .22-caliber bullet, reaching speeds of 45 mph underwater and smacking its prey with 200 pounds of force.
           </p>
-          <img src="/images/mantisShrimpPunch.gif" alt=".gif infographic about the Stomatopoda's punch">
+          <img class="img-width-adjust" src="/images/mantisShrimpPunch.gif" alt=".gif infographic about the Stomatopoda's punch">
         </section>
         <section>
           <h2>Crazy Eyes!</h2>
@@ -90,7 +91,7 @@ They can see a special spiralling type of light called circularly polarised ligh
               <li>https://en.wikipedia.org/wiki/Mantis_shrimp</li>
               <li>https://aqua.org/explore/animals/peacock-mantis-shrimp</li>
             </ol>
-          </div>
+
           </section>
         </section>
         </table>
